[gd_scene load_steps=5 format=3 uid="uid://jot0eqhqiiw0"]

[ext_resource type="Script" path="res://levels/easy_mode/easy_levels.gd" id="1_hr4tr"]
[ext_resource type="FontFile" uid="uid://ddtxg0mem3wy" path="res://assets/Square.ttf" id="2_eije2"]
[ext_resource type="Script" path="res://levels/easy_mode/easy_levels_setter.gd" id="3_3g24t"]
[ext_resource type="PackedScene" uid="uid://b6f26lhny7t2t" path="res://smaller_nodes/pause_menu.tscn" id="4_ww6l8"]

[node name="EasyLevels" type="Node2D"]
script = ExtResource("1_hr4tr")
metadata/_edit_horizontal_guides_ = []

[node name="UI" type="CanvasLayer" parent="."]
layer = 5

[node name="Phase" type="Label" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = 18.0
offset_right = 40.0
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_eije2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PhaseShow" type="Timer" parent="UI"]
wait_time = 2.0
one_shot = true
autostart = true

[node name="Points" type="Label" parent="UI"]
offset_left = 5.0
offset_right = 189.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("2_eije2")
text = "points:"
vertical_alignment = 1

[node name="Lives" type="Label" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -101.0
offset_right = -6.0
offset_bottom = 23.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("2_eije2")
text = "Lives: 3"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Level" type="Node2D" parent="."]
script = ExtResource("3_3g24t")

[node name="NextLevelTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -30
offset_left = -13.0
offset_top = -10.0
offset_right = 534.0
offset_bottom = 322.0
color = Color(0.188235, 0.188235, 0.188235, 1)

[node name="pause_menu" parent="." instance=ExtResource("4_ww6l8")]

[connection signal="timeout" from="UI/PhaseShow" to="." method="_on_phase_show_timeout"]
[connection signal="timeout" from="NextLevelTimer" to="." method="_on_next_level_timer_timeout"]
